# ragmail

./: .gitignore  AGENTS.md  Makefile  README.md  ai-state.md  justfile  plan.md  pyproject.toml  todo.md
.codex/skills/: ragmail
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  RISKS.md  cleanup-plan.md  developers.md  examples.md  pipeline.md  prompts.md  release.md
just.d/: 10-vars.just  20-bootstrap.just  25-build.just  30-test.just  35-lint.just  40-version.just  50-release.just  60-bench.just
just.d/scripts/: benchmark_pipeline.py  benchmark_threshold.py  bootstrap-python.sh  build-python-bridge.sh  build-release-artifacts.sh  bump-patch.sh  generate-homebrew-formula.sh  link-dev-cli.sh  package-deb.sh  publish-homebrew-tap.sh  release-check.sh  release-ci-dry-run.sh  release-publish-assets.sh  release-smoke.sh  release-tag.sh  run-python.sh  sync-version.sh  test-python.sh
lib/ragmail/: __init__.py  cli.py  config.py  ignorelist.py  mbox_index.py  pipeline.py  prompts.py  search_cli.py  workspace.py
python/: README.md  pyproject.toml  pytest.ini
python/scripts/: pyinstaller_entry.py
python/tests/: conftest.py  test_clean_historical_parity.py  test_clean_parity.py  test_email_generation.py  test_email_parser.py  (+14 more)
rust/: Cargo.toml
rust/ragmail-clean/: Cargo.toml
rust/ragmail-clean/src/: codec.rs  header.rs  lib.rs  mime.rs  pipeline.rs  tests.rs  text.rs  types.rs
rust/ragmail-cli/: Cargo.toml  build.rs
rust/ragmail-cli/src/: display.rs  file_ops.rs  logging.rs  main.rs  python_bridge.rs  tests.rs  util.rs
rust/ragmail-core/: Cargo.toml
rust/ragmail-core/src/: lib.rs  stage.rs  stage_tests.rs  workspace.rs
rust/ragmail-core/src/workspace/: fs_helpers.rs  mod.rs  tests.rs
rust/ragmail-index/: Cargo.toml
rust/ragmail-index/src/: build.rs  lib.rs  query.rs  record.rs  tests.rs  types.rs
rust/ragmail-mbox/: Cargo.toml
rust/ragmail-mbox/src/: lib.rs  split.rs  stream.rs  tests.rs  types.rs
tests/: __init__.py  test_email_generation.py  test_embedding_benchmarks.py  test_openai_backend.py  test_prompts.py  test_rag_integration.py  test_validation.py  test_vectorize_store.py
(+54 files in other folders)
