[workspace]
members = [
  "ragmail-cli",
  "ragmail-core",
  "ragmail-mbox",
  "ragmail-clean",
  "ragmail-index",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.77"

[workspace.dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.9"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
