[package]
name = "ragmail-clean"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ragmail-core = { path = "../ragmail-core" }
ragmail-mbox = { path = "../ragmail-mbox" }
ragmail-index = { path = "../ragmail-index" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
