[package]
name = "ragmail-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ragmail-core = { path = "../ragmail-core" }
ragmail-mbox = { path = "../ragmail-mbox" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
